update ant build for jdk24