@@ -161,7 +161,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
          <arg value="--main-jar"/>
          <arg value="${jlink.launcher.name}-${version.public}.jar"/>
          <arg value="--java-options" />
-         <arg value="-XX:CompileThreshold=1000 -XX:+TieredCompilation" />
+         <arg value="-XX:CompileThreshold=1000 -XX:+TieredCompilation --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED --enable-native-access=javafx.graphics" />
          <arg value="--copyright" />
          <arg value="Copyright © 2025 Christopher Tipper" />
          <arg value="--mac-package-identifier" />
@@ -199,7 +199,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
          <arg value="--main-jar"/>
          <arg value="${jlink.launcher.name}-${version.public}.jar"/>
          <arg value="--java-options" />
-         <arg value="-XX:CompileThreshold=1000 -XX:+TieredCompilation" />
+         <arg value="-XX:CompileThreshold=1000 -XX:+TieredCompilation --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED --enable-native-access=javafx.graphics" />
          <arg value="--copyright" />
          <arg value="Copyright © 2025 Christopher Tipper" />
          <arg value="--vendor" />
@@ -229,7 +229,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
          <arg value="--main-jar"/>
          <arg value="${jlink.launcher.name}-${version.public}.jar"/>
          <arg value="--java-options" />
-         <arg value="-XX:CompileThreshold=1000 -XX:+TieredCompilation" />
+         <arg value="-XX:CompileThreshold=1000 -XX:+TieredCompilation --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED --enable-native-access=javafx.graphics" />
          <arg value="--copyright" />
          <arg value="Copyright © 2025 Christopher Tipper" />
          <arg value="--vendor" />
